# arduino_crash_course

./: .gitignore  24LC256_8hpp.html  24LC256_8hpp_source.html  CAT24C16_8hpp.html  CAT24C16_8hpp_source.html  CD4051_8hpp.html  CD4051_8hpp_source.html  CD4067_8hpp.html  CD4067_8hpp_source.html  MCP4561_8hpp.html  MCP4561_8hpp_source.html  MMA8452_8hpp.html  MMA8452_8hpp_source.html  PCF8574_8hpp.html  PCF8574_8hpp_source.html  README.txt  accumulator_2tags_8hpp.html  accumulator_2tags_8hpp_source.html  accumulator_8hpp.html  accumulator_8hpp_source.html  adv__eeprom_8hpp.html  adv__eeprom_8hpp_source.html  analog_8hpp.html  analog_8hpp_source.html  annotated.html  archive__enum_8hpp.html  archive__enum_8hpp_source.html  ard__assert_8hpp.html  ard__assert_8hpp_source.html  array_8hpp.html  array_8hpp_source.html  array__support_8hpp.html  array__support_8hpp_source.html  benchmark__report_8hpp.html  benchmark__report_8hpp_source.html  bitset_8hpp.html  bitset_8hpp_source.html  bitset__support_8hpp.html  bitset__support_8hpp_source.html  bluesmirf__hid_8hpp.html  (+693 more)
change_paths/: mac_only.bs  rename_path.bs
makefile/: Master_Makefile.mk
program/03_actual_progs/glove_preparation/logic_src/: CMakeLists.txt
program/03_actual_progs/glove_preparation/logic_src/examples/: CMakeLists.txt  test_logic.cpp
program/03_actual_progs/glove_preparation/logic_src/lib/: CMakeLists.txt  logic.cpp
program/03_actual_progs/glove_preparation/logic_src/src/: logic.hpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  (+197 more)
(+251 files in other folders)
